[package]
name = "ctd"
version = "0.1.0"
edition = "2021"
authors = [ "k3nder" ]
license = "GPL-3.0-only"
description = "A simple ToDo manager"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
chrono = "0.4.38"
kommons_macros = "0.1.0"
clap = { version = "4.5.20", features = ["derive"] }
prettytable-rs = "0.10.0"
once_cell = "1.20.2"
whoami = "1.5.2"